--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,9 +10,25 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
+  cache:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/cache@v2
+      with:
+        path: |
+          ~/.cargo/bin/
+          ~/.cargo/registry/index/
+          ~/.cargo/registry/cache/
+          ~/.cargo/git/db/
+          target/
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
   build:
 
     runs-on: ubuntu-latest
+    needs: cache
 
     steps:
     - uses: actions/checkout@v2
@@ -22,6 +38,7 @@ jobs:
   clippy:
 
     runs-on: ubuntu-latest
+    needs: cache
 
     steps:
     - uses: actions/checkout@v2
