--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,8 +13,10 @@ jobs:
   cache:
 
     runs-on: ubuntu-latest
+    needs: [ build, clippy ]
 
     steps:
+    - uses: actions/checkout@v2
     - uses: actions/cache@v2
       with:
         path: |
@@ -28,7 +30,6 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    needs: cache
 
     steps:
     - uses: actions/checkout@v2
@@ -38,7 +39,6 @@ jobs:
   clippy:
 
     runs-on: ubuntu-latest
-    needs: cache
 
     steps:
     - uses: actions/checkout@v2
