Feat: Add database connection

--- a/example.env
+++ b/example.env
@@ -1,3 +1,4 @@
 SOPHY_TOKEN=
 SOPHY_APPLICATION_ID=
 SOPHY_OWNER_GUILD=
+SOPHY_DATABASE_CONNECTION=postgresql://postgres:12345@localhost:5432/sophy?currentSchema=bot
