--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ resolver = "2"
 
 [dependencies]
 dotenv = "0.15.0"
+lazy_static = "1.4.0"
 
 [dependencies.serenity]
 version = "0.10.9"
@@ -18,3 +19,12 @@ features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_ap
 [dependencies.tokio]
 version = "1.12.0"
 features = ["macros", "rt-multi-thread"]
+
+[dependencies.rbatis]
+version = "2.1.3"
+default-features = false
+features = ["postgres"]
+
+[dependencies.barrel]
+version = "0.6.5"
+features = ["pg"]
