--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,11 +5,14 @@ authors = ["Gabriel-Paulucci <gabrielpauluccimunizmendes@gmail.com>"]
 edition = "2018"
 resolver = "2"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+# Dependencies
 
 [dependencies]
 dotenv = "0.15.0"
 lazy_static = "1.4.0"
+log = "0.4.14"
+env_logger = "0.9.0"
+chrono = "0.4.19"
 
 [dependencies.serenity]
 version = "0.10.9"
