--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ lazy_static = "1.4.0"
 log = "0.4.14"
 env_logger = "0.9.0"
 chrono = "0.4.19"
+clap = "3.0.0-beta.4"
 
 [dependencies.serenity]
 version = "0.10.9"
