--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ log = "0.4.14"
 env_logger = "0.9.0"
 chrono = "0.4.19"
 clap = "3.0.0-beta.4"
+image = "0.23.14"
+imageproc = "0.22.0"
 
 [dependencies.serenity]
 version = "0.10.9"
