--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,10 +27,15 @@ version = "1.12.0"
 features = ["macros", "rt-multi-thread"]
 
 [dependencies.rbatis]
-version = "2.1.3"
+version = "2.1.5"
 default-features = false
 features = ["postgres"]
 
-[dependencies.barrel]
-version = "0.6.5"
-features = ["pg"]
+[dependencies.refinery]
+version = "0.7.0"
+features = ["postgres"]
+
+[dependencies.sqlx]
+version = "0.5.9"
+default-features = false
+features = ["postgres", "runtime-async-std-rustls"]
