--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,13 +24,13 @@ features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_ap
 
 [dependencies.tokio]
 version = "1.12.0"
-features = ["macros", "rt-multi-thread", "sync", "parking_lot"]
+features = ["macros", "rt-multi-thread", "parking_lot"]
 
 [dependencies.refinery]
 version = "0.7.0"
 features = ["postgres"]
 
-[dependencies.sqlx]
-version = "0.5.9"
+[dependencies.sea-orm]
+version = "0.3.1"
 default-features = false
-features = ["macros", "postgres", "runtime-async-std-rustls"]
+features = ["macros", "sqlx-postgres", "runtime-tokio-rustls"]
