--- a/example.env
+++ b/example.env
@@ -2,3 +2,4 @@ SOPHY_TOKEN=
 SOPHY_APPLICATION_ID=
 SOPHY_OWNER_GUILD=
 DATABASE_URL=postgresql://postgres:12345@localhost:5432/sophy
+SQLX_OFFLINE=true
