--- a/example.env
+++ b/example.env
@@ -1,5 +1,5 @@
 SOPHY_TOKEN=
 SOPHY_APPLICATION_ID=
 SOPHY_OWNER_GUILD=
-DATABASE_URL=postgresql://postgres:12345@localhost:5432/sophy
+DATABASE_URL=mysql://root:123456@localhost:3306/sophy
 SQLX_OFFLINE=true
