--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,9 +28,14 @@ features = ["macros", "rt-multi-thread", "parking_lot"]
 
 [dependencies.refinery]
 version = "0.7.0"
-features = ["postgres"]
+features = ["mysql"]
 
 [dependencies.sea-orm]
-version = "0.3.1"
+version = "0.3.2"
 default-features = false
-features = ["macros", "sqlx-postgres", "runtime-tokio-rustls"]
+features = ["macros", "sqlx-mysql", "runtime-tokio-rustls"]
+
+# Scripts
+
+[package.metadata.scripts]
+migrate = "cargo run -- -m & sea-orm-cli generate entity -o src/database/schemas"
