Parte inicial do recode da db

--- a/example.env
+++ b/example.env
@@ -1,5 +1,4 @@
 SOPHY_TOKEN=
 SOPHY_APPLICATION_ID=
 SOPHY_OWNER_GUILD=
-DATABASE_URL=mysql://root:123456@localhost:3306/sophy
-SQLX_OFFLINE=true
+DATABASE_URL=postgres://postgres:12345@localhost:5432/sophy
