--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,7 @@
 name = "sophy_bot"
 version = "0.1.0"
 authors = ["Gabriel-Paulucci <gabrielpauluccimunizmendes@gmail.com>"]
-edition = "2018"
-resolver = "2"
+edition = "2021"
 
 # Dependencies
 
@@ -26,16 +25,12 @@ features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_ap
 version = "1.12.0"
 features = ["macros", "rt-multi-thread", "parking_lot"]
 
-[dependencies.refinery]
-version = "0.7.0"
-features = ["mysql"]
-
 [dependencies.sea-orm]
-version = "0.3.2"
+version = "0.4.2"
 default-features = false
-features = ["macros", "sqlx-mysql", "runtime-tokio-rustls"]
+features = ["macros", "sqlx-postgres", "runtime-tokio-native-tls", "with-uuid"]
 
 # Scripts
 
-[package.metadata.scripts]
-migrate = "cargo run -- -m & sea-orm-cli generate entity -o src/database/schemas"
+# prisma migrate dev --skip-generate
+# sea-orm-cli generate entity -o src/database/entity
