--- a/.github/actions/prisma/Dockerfile
+++ b/.github/actions/prisma/Dockerfile
@@ -2,6 +2,6 @@ FROM node:17
 
 RUN npm install -g prisma
 
-COPY ./prisma /prisma
+COPY prisma /prisma
 
 CMD [ "prisma migrate deploy --skip-generate" ]
