--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ env_logger = "0.9.0"
 chrono = "0.4.19"
 clap = "3.0.0-beta.4"
 serde = "1.0.133"
+typed-builder = "0.9.1"
 
 [dependencies.serenity]
 version = "0.10.9"
@@ -30,15 +31,11 @@ features = ["env", "toml"]
 
 [dependencies.sqlx]
 version = "0.5.10"
-features = ["postgres", "runtime-tokio-native-tls", "uuid", "time"]
+features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "offline"]
 
 [dependencies.uuid]
 version = "0.8.2"
 features = ["v4"]
-
-[dependencies.builder-pattern]
-version = "0.4.2"
-default-features = false
 
 # Features
 
