--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,49 +4,12 @@ version = "0.1.0"
 authors = ["Gabriel-Paulucci <gabrielpauluccimunizmendes@gmail.com>"]
 edition = "2021"
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 # Dependencies
 
 [dependencies]
-dotenv = "0.15.0"
-lazy_static = "1.4.0"
-log = "0.4.14"
-env_logger = "0.9.0"
-chrono = "0.4.19"
-serde = "1.0.136"
-typed-builder = "0.9.1"
 
-[dependencies.serenity]
-version = "0.10.9"
-default-features = false
-features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"]
-
-[dependencies.tokio]
-version = "1.15.0"
-features = ["macros", "rt-multi-thread", "parking_lot"]
-
-[dependencies.figment]
-version = "0.10.6"
-features = ["env", "toml"]
-
-[dependencies.sqlx]
-version = "0.5.10"
-features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "offline"]
-
-[dependencies.uuid]
-version = "0.8.2"
-features = ["v4"]
-
-[dependencies.clap]
-version = "3.0.14"
-features = ["derive"]
-
-# Features
-
-[features]
-default = []
-
-# Scripts
-
-# prisma migrate dev --skip-generate
-# sea-orm-cli generate entity -o src/database/entity
-# cargo sqlx prepare
+[dependencies.poise]
+git = "https://github.com/kangalioo/poise.git"
+rev = "a28b0193ab032aaedb6b383d1be0d717f9dcf775"
