--- a/web/.editorconfig
+++ b/web/.editorconfig
@@ -1,12 +1,5 @@
-# EditorConfig is awesome: https://EditorConfig.org
-
-# top-most EditorConfig file
-root = true
-
-[*]
+[*.{js,jsx,ts,tsx,vue}]
 indent_style = space
-indent_size = 4
-end_of_line = lf
-charset = utf-8
+indent_size = 2
 trim_trailing_whitespace = true
 insert_final_newline = true
