--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -26,6 +26,10 @@ jobs:
         go-version: '^1.17.7'
     - run: go version
 
+    - name: Tidy
+      run: go mod tidy
+      working-directory: ${{env.WORKING_DIR}}
+
     - name: Build
       run: go build
       working-directory: ${{env.WORKING_DIR}}
