--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: Web
 
 on:
@@ -31,9 +28,9 @@ jobs:
         cache: 'yarn'
         
     - name: Install
-    - run: yarn
-    - working-directory: ${{env.WORKING_DIR}}
+      run: yarn
+      working-directory: ${{env.WORKING_DIR}}
 
     - name: Build
-    - run: yarn build
-    - working-directory: ${{env.WORKING_DIR}}
+      run: yarn build
+      working-directory: ${{env.WORKING_DIR}}
