--- a/bot/Cargo.toml
+++ b/bot/Cargo.toml
@@ -14,19 +14,9 @@ env_logger = "0.9.0"
 log = "0.4.14"
 chrono = "0.4.19"
 typed-builder = "0.9.1"
+poise = { git = "https://github.com/kangalioo/poise.git", rev = "a28b0193ab032aaedb6b383d1be0d717f9dcf775" }
+tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread", "sync"] }
+figment = { version = "0.10.6", features = ["env", "toml"] }
 
-[dependencies.poise]
-git = "https://github.com/kangalioo/poise.git"
-rev = "a28b0193ab032aaedb6b383d1be0d717f9dcf775"
-
-[dependencies.tokio]
-version = "1.16.1"
-features = ["macros", "rt-multi-thread", "sync"]
-
-[dependencies.figment]
-version = "0.10.6"
-features = ["env", "toml"]
-
-[dependencies.sqlx]
-version = "0.5.10"
-features = ["postgres", "runtime-tokio-rustls", "macros", "offline", "chrono"]
+[build-dependencies]
+tonic-build = "0.6"
