--- a/bot/Cargo.toml
+++ b/bot/Cargo.toml
@@ -17,6 +17,8 @@ typed-builder = "0.9.1"
 poise = { git = "https://github.com/kangalioo/poise.git", rev = "a28b0193ab032aaedb6b383d1be0d717f9dcf775" }
 tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread", "sync"] }
 figment = { version = "0.10.6", features = ["env", "toml"] }
+tonic = "0.6.2"
+prost = "0.9.0"
 
 [build-dependencies]
-tonic-build = "0.6"
+tonic-build = "0.6.2"
