--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -22,6 +22,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
 
     - name: Build
       run: cargo build --verbose
@@ -33,6 +36,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: stable
 
     - name: Clippy
       run: cargo clippy --verbose
