--- a/.github/workflows/docker-in-dev.yml
+++ b/.github/workflows/docker-in-dev.yml
@@ -4,8 +4,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  bot_build:
-
+  bot:
     runs-on: ubuntu-latest
 
     steps:
@@ -26,3 +25,24 @@ jobs:
           file: bot.Dockerfile
           push: true
           tags: ghcr.io/fardragi/sophy/bot:in-dev
+  server:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.PACKAGE_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: server.Dockerfile
+          push: true
+          tags: ghcr.io/fardragi/sophy/server:in-dev
