--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.9'
 
 services:
   database:
@@ -16,20 +16,16 @@ services:
       retries: 5
 
   bot:
-    build:
-      context: .
-      dockerfile: bot.Dockerfile
+    image: ghcr.io/fardragi/sophy/bot:in-dev
     restart: always
     depends_on:
-      - grpc
+      - server
     environment:
       - SOPHY_TOKEN=${APP_BOT_TOKEN}
-      - SOPHY_GRPC_URL=http://grpc:6000
+      - SOPHY_GRPC_URL=http://server:6000
 
-  grpc:
-    build:
-      context: .
-      dockerfile: grpc.Dockerfile
+  server:
+    image: ghcr.io/fardragi/sophy/server:in-dev
     restart: always
     depends_on:
       database:
