--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -16,7 +16,7 @@ env:
 
 jobs:
   build:
-    runs_on: ubuntu-latest
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
@@ -27,5 +27,5 @@ jobs:
         go-version: 1.17
 
     - name: Build
-      run: go build -v
+      run: go build -v ./...
       working-directory: ${{env.WORKING_DIR}}
